<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle1"
        android:id="@+id/txtTitle1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle2"
        android:id="@+id/txtTitle2"
        android:layout_below="@+id/txtTitle1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgStory1"
        android:src="@drawable/beyonce"
        android:layout_alignTop="@+id/txtTitle1"
        android:layout_alignLeft="@+id/imgStory2"
        android:layout_alignStart="@+id/imgStory2"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imgStory1" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgStory2"
        android:src="@drawable/grande"
        android:layout_alignTop="@+id/txtTitle2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/imgStory2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnViewStory1"
        android:id="@+id/btnViewStory1"
        android:layout_alignBottom="@+id/imgStory1"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnViewStory2"
        android:id="@+id/btnViewStory2"
        android:layout_alignBottom="@+id/imgStory2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
